--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.5"
   },
