--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass -watch scss -o src"
+    "scss": "node-sass -watch scss -o css"
   },
   "author": "",
   "license": "ISC"
