--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.5"
   },
   "devDependencies": {},
