--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon transpiler.js"
   },
   "author": "",
   "license": "ISC"
