--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router": "^5.2.0",
