--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.14",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
