--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "react": "^16.14.0",
