--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
