--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,6 +15,7 @@
     "multer": "^1.4.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.1.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
