Mise en place de la barre de scroll sur la page chat

--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -19,7 +19,9 @@
     "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-scrollbars-custom": "^4.0.25",
+    "react-virtualized": "^9.22.2"
   },
   "scripts": {
     "start": "react-scripts start",
