--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -24,7 +24,7 @@
     "react-virtualized": "^9.22.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
